--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tasfia's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia odio nisi cupiditate sapiente praesentium! Similique harum dolores minus nisi, quis quos dicta nesciunt quod doloribus quo sed consequatur a magni earum, ducimus rem pariatur, recusandae provident sunt soluta voluptate mollitia eius commodi. Consectetur, et asperiores. Eaque placeat repudiandae, dolore rerum, dicta excepturi sapiente totam praesentium numquam iure voluptatem eveniet quam.</p>
+
+    <section class="top-banner">
+        <div class="width">
+            <h1>Welcome To</h1>
+            <h1><span class="color"> Tasfia Disha</span>
+                World
+            </h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>hey, I am tasfia. Basically i am a CSE student. Now i am in my 3rd semester. I have completed some
+                project in diffrent topics. I am learning html, CSS etc </p>
+            <a class="hire" target="_blank" href="https://www.linkedin.com/in/tasfia-disha-958486244/">HIRE ME</a>
+
+        </div>
+        <div class="width"><img src="disha.png" alt=""></div>
+    </section>
 </body>
+
 </html>
