--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
     <section class="top-banner">
+
         <div class="width">
             <h1>Welcome To</h1>
             <h1><span class="color"> Tasfia Disha</span>
@@ -27,6 +28,17 @@
 
         </div>
         <div class="width"><img src="disha.png" alt=""></div>
+
+    </section>
+    <section class="dream-big">
+        <div class="width"><img src="disha2.png" alt=""></div>
+        <div class="width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my sister how
+                to make a simple website. My goal is to build 3 website and learn advanced topics.</p>
+            <a class="hire" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
     </section>
 </body>
 
