--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 World
             </h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>hey, I am tasfia. Basically i am a CSE student. Now i am in my 3rd semester. I have completed some
-                project in diffrent topics. I am learning html, CSS etc </p>
+            <p>hey, I am Tasfia. Basically i am a CSE student. Now i am in my 3rd semester. I have completed some
+                project in diffrent topics. I am learning html, CSS, Bootstrap etc to enhance my knowledge in Web
+                Development. </p>
             <a class="hire" target="_blank" href="https://www.linkedin.com/in/tasfia-disha-958486244/">HIRE ME</a>
 
         </div>
@@ -46,7 +47,7 @@
             <div id="full-stack-developer" class="exitem">
                 <h1>Full Stack Developer</h1>
                 <h3 class="color">2021-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                <p>I have learned HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
@@ -55,7 +56,7 @@
             <div id="baby-web-developer" class="exitem">
                 <h1>Baby Web Developer</h1>
                 <h3 class="color">2020-2024 | Programming Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and
                     showed it
                     to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
